--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 
 <body>
-    <h1>Mi pagina web HTML primer cambio</h1>
+    <h1>Mi pagina web HTML primer cambio sa</h1>
 
     <ul>
         <li><a href="index.html">Inicio</a></li>
         <li><a href="pagina1.html">Pagina 1</a></li>
     </ul>
 
-    <p>Hola mundo este es el curso de GIT primer cambioo</p>
+    <p>Hola mundo este es el curso de GIT primer cambioo sa</p>
 </body>
 
 </html>
