--- a/pagina1.html
+++ b/pagina1.html
@@ -9,14 +9,14 @@
 </head>
 
 <body>
-    <h1>Pagina 1 primer cambiooo</h1>
+    <h1>Pagina 1 primer cambiooo sa</h1>
 
     <ul>
         <li><a href="index.html">Inicio</a></li>
         <li><a href="pagina1.html">Pagina 1</a></li>
     </ul>
 
-    <p>Pagina 1 del curso de GIT primer cambiooo</p>
+    <p>Pagina 1 del curso de GIT primer cambiooo sa</p>
 </body>
 
 </html>
