cambios en el pagina1

--- a/pagina1.html
+++ b/pagina1.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Pagina 1 primer cambiooo sa</h1>
+    <h1>Pagina 1 primer cambiooo sa lam</h1>
 
     <ul>
         <li><a href="index.html">Inicio</a></li>
