--- a/contacto.html
+++ b/contacto.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Contacto</h1>
-    <h2>Esto es la pagina de contacto</h2>
+    <h2>Esto es la pagina de contacto sala</h2>
 
     
 </body>
