--- a/pagina1.html
+++ b/pagina1.html
@@ -17,6 +17,7 @@
     </ul>
 
     <p>Pagina 1 del curso de GIT primer cambiooo sa</p>
+    <p>Vamos a poner un párrafo mas a todos los archivos Cherry Pick</p>
 </body>
 
 </html>
