--- a/contacto.html
+++ b/contacto.html
@@ -11,6 +11,7 @@
 <body>
     <h1>Contacto</h1>
     <h2>Esto es la pagina de contacto sala</h2>
+    <p>Vamos a poner un párrafo mas a todos los archivos Cherry Pick</p>
 
     
 </body>
